@@ -7,6 +7,12 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
+    <uses-feature android:glEsVersion="0x00020000" />
+    <supports-screens
+            android:largeScreens="true"
+            android:normalScreens="true"
+            android:smallScreens="true"
+            android:anyDensity="true"/>
 
     <application
         android:allowBackup="true"
